# interview-preparation

./: CMakeLists.txt  ReadMe.md  Readme.md
BackTracking Algorithms/: Knight_tour_problem.cpp
C++11/: variadicTemplate.cpp
C++11/multi-threading/: eventHandling.cpp  intro.cpp  lock_guard.cpp  mutex.cpp  references.cpp
Data structures and algorithms in C++ Book by Michael T. Goodrich/Chapter 1 - A C++ Primer/Creativity/: C-1.1.cpp  C-1.2.cpp  C-1.3.cpp  C-1.4.cpp  C-1.5.cpp  C-1.6.cpp
Data structures and algorithms in C++ Book by Michael T. Goodrich/Chapter 1 - A C++ Primer/Reinforcement/: R-1.1.md  R-1.10.md  R-1.11.cpp  R-1.2.cpp  R-1.3.cpp  R-1.4.md  R-1.5.md  R-1.6.cpp  R-1.7.cpp  R-1.8.cpp  R-1.9.cpp
Data structures and algorithms in C++ Book by Michael T. Goodrich/Chapter 1 - A C++ Primer/Reinforcement/R-1.12/: CreditCard.cpp  CreditCard.h
Data structures and algorithms in C++ Book by Michael T. Goodrich/Chapter 1 - A C++ Primer/Reinforcement/R-1.13/: CreditCard.cpp  CreditCard.h
Data structures and algorithms in C++ Book by Michael T. Goodrich/Chapter 1 - A C++ Primer/Reinforcement/R-1.14/: CreditCard.cpp  CreditCard.h
Kick Start 2018/Round A/Even Digits/: Problem.md
MultiThreading/: prog1.cpp
cmake/: add_subdirectory.cmake  variables.cmake
geeksforgeeks/: CMakeLists.txt  print-subsequences-string.cpp
leetcode/: 0002-add-two-numbers.cpp  0003-longest-substring-without-repeating-characters.cpp  0004-median-of-two-sorted-arrays.cpp  0005-longest-palindromic-substring.cpp  0006-zigzag-conversion.cpp  0007-reverse-integer.cpp  0008-string-to-integer-atoi.cpp  0009-palindrome-number.cpp  CMakeLists.txt  add-two-numbers.cpp  longest-substring-without-repeating-characters.cpp  two-sum.cpp
